# 2023-autumn-ab-python-hw-14-team-dev-egoriyaa

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: app.yml
abc/api/: main.py
abc/db/: __init__.py  main.py
aic/api/: app.py  main.py  utilities.py
aic/classification_model/: model.py  onnx_exporter.py
aic/classification_model/model_repository/ensemble_python_resnet50/: config.pbtxt
aic/classification_model/model_repository/resnet50_trt/: config.pbtxt
aic/clsf_model/: onnx_exporter.py  onnx_inference.py
aic/clsf_model/model_repository/preprocess/: config.pbtxt
aic/db/: __init__.py  main.py
assets/documentation/: openapi.yaml
assets/documentation/aic/: index.html
assets/documentation/aic/api/: app.html  index.html
assets/documentation/aic/db/: index.html  main.html
docker/api/: Dockerfile
docker/model/: Dockerfile
docker/tests/: Dockerfile
src/api/: app.py
src/model/: __init__.py
tests/: test_app.py  test_db.py  test_fake.py  test_utilities.py
tests/test_integration/test_db/: test_db.py
tests/test_local/test_api/: test_app.py  test_utilities.py
