[tool.poetry]
name = "AIC"
version = "0.1.0"
description = "Application for bird classification"
authors = [
    "Егор Батурин",
    "Камиль Аглиуллин",
    "Владимир Дьяков"
]

[tool.poetry.dependencies]
python = ">=3.10.0, <3.11.0"

psycopg2-binary = "*"

pytest = "^7.3"
pytest-cov = "^4.0"

ruff = "*"
black = "*"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"

[tool.ruff]
ignore-init-module-imports = true # TODO doesn't work without exclude section
exclude = ["__init__.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
