[tool.poetry]
name = "AIC"
version = "0.1.0"
description = "Application for bird classification"
authors = [
    "Егор Батурин",
    "Камиль Аглиуллин",
    "Владимир Дьяков"
]

packages = [{ include = "aic"}]

[tool.poetry.dependencies]
python = ">=3.10.0, <3.11.0"

psycopg2-binary = "*"

pytest = "^7.3"
pytest-cov = "^4.0"

ruff = "*"
black = "*"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
python-multipart = "^0.0.6"
httpx = "^0.26.0"
opencv-python = "^4.8.1.78"

numpy = "*"
onnx = "*"
onnxruntime = "*"

[tool.ruff]
ignore-init-module-imports = true # TODO doesn't work without exclude section
exclude = ["__init__.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
